fix: slider: slider.scss changed; border under slider in slider component; fix  border visibility: property  background in destination-date.scss (destination-date__arrow-block) in destination-date-component deleted

--- a/src/styles/scss/components/destination-date/destination-date.scss
+++ b/src/styles/scss/components/destination-date/destination-date.scss
@@ -10,7 +10,6 @@
         position: relative;
         height: 100%;
         border-right: 1px solid $carouselBotomBorderColor;
-        background: $backgroundColor;
         color: $findHolidaysColor;
         margin-right: 5px;
         box-sizing: border-box;
