--- a/src/styles/scss/components/slider/media.scss
+++ b/src/styles/scss/components/slider/media.scss
@@ -8,13 +8,13 @@
             min-height: 495px !important;
 
             .carousel-caption {
-                padding-top: 160px !important;
+                padding-bottom: 100px !important;
             }
         }
     }
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .carousel {
         height: 395px !important;
         min-height: 395px !important;
@@ -24,7 +24,7 @@
             min-height: 395px !important;
             
             .carousel-caption {
-                padding-top: 130px !important;
+                padding-bottom: 40px !important;
             
                 h5 {
                     font-size: 2rem !important;
@@ -63,8 +63,8 @@
             min-height: 250px !important;
             
             .carousel-caption {
-                padding-top: 150px !important;
-            
+                padding-bottom: 0 !important;
+
                 h5 {
                     display: none;
                 }
@@ -75,7 +75,7 @@
     
                 .explore-buttons {
                     .btn {
-                        min-height: 40px !important;
+                        height: 40px !important;
                         font-size: 0.8rem !important;
                         padding: 7px !important;
                     }
@@ -96,8 +96,6 @@
     .carousel {
         .carousel-item {
             .carousel-caption {
-                padding-top: 160px !important;
-
                 .explore-buttons {
                     .btn {
                         margin: 5px 5px 0 !important;
