--- a/src/styles/scss/components/slider/slider.scss
+++ b/src/styles/scss/components/slider/slider.scss
@@ -3,19 +3,20 @@
     min-height: 695px;
 
     .carousel-inner {
-        border-bottom: 1px solid $carouselBotomBorderColor;
+        overflow: unset;
 
         .carousel-item {
             position: relative;
-            display: block;
             height: 695px;
             min-height: 695px;
-            background: url(/images/banner.png) no-repeat center;
-            background-size: cover;
+            backface-visibility: unset;
+            border-bottom: 1px solid $carouselBotomBorderColor;
 
             &::after {
                 content: "";
                 position: absolute;
+                top: 0;
+                left: 0;
                 width: 100%;
                 height: 100%;
                 background: $navTextColor;
@@ -23,8 +24,7 @@
             }
 
             .carousel-caption {
-                bottom: unset;
-                padding-top: 270px;
+                padding-bottom: 200px;
                 z-index: 100;
 
                 h5 {
@@ -37,7 +37,6 @@
                     font-size: 1.563rem;
                     font-weight: 500;
                     line-height: 30px;
-                    text-align: center;
                 }
 
                 .explore-buttons {
@@ -48,12 +47,12 @@
                     }
 
                     .btn {
-                        min-height: 60px;
+                        height: 60px;
                         font-size: 1.563rem;
                         font-weight: 500;
                         letter-spacing: -1px;
+                        line-height: 0.7;
                         text-transform: uppercase;
-                        text-align: center;
                         color: $whiteColor;
                         margin: 31px 10px 0;
                         padding: 20px;
